--- a/index.css
+++ b/index.css
@@ -1,26 +1,26 @@
-.playlistTime_inner{
+.playlistDur{
 	position: absolute;
 	right: 15px;
 	bottom: 10px;
 }
 
-.new{
+.polymer{
 	position: unset;
 	left: 15px;
 	font-size: 12px;
 	padding-bottom: 10px;
 }
 
-.playlistTime_inner span{
+.playlistDur span{
 	color: #767676;
 	margin-left: 5px;
 }
 
-.playlistTime_inner img{
+.playlistDur img{
 	width: 16px;
 	height: 16px;
 }
-.playlistTime_inner img.playlistTime_load{
+.playlistDur img.playlistDur_load{
 	animation-name: circle;
 	animation-duration: 1s;
 	animation-iteration-count: infinite;
@@ -29,8 +29,8 @@
 	0%{transform: rotate(0deg)}
 	100%{transform: rotate(360deg)}
 }
-.playlistTime_inner img,
-.playlistTime_inner span{
+.playlistDur img,
+.playlistDur span{
 	display: inline-block;
 	vertical-align: middle;
 }
