--- a/PlaylistDuration.css
+++ b/PlaylistDuration.css
@@ -10,7 +10,7 @@
 
 .playlistDur span,
 .playlistDur label{
-	color: #767676;
+	color: var(--yt-spec-static-overlay-text-secondary, #AAA);
 	margin-left: 5px;
 }
 
